# normpath

./: COPYRIGHT  Cargo.toml  LICENSE-MIT  LICENSE-THIRD-PARTY  README.md
.github/workflows/: build.yml
macros/: COPYRIGHT  Cargo.toml  LICENSE-MIT  description.md
macros/src/: lib.rs
src/: base.rs  cmp.rs  common.rs  error.rs  lib.rs  localize.rs  windows.rs
src/common/: mod.rs  normalize.rs
src/common/localize/: macos.rs  mod.rs
src/common/localize/macos/: fruity.rs  mod.rs
src/windows/: localize.rs  mod.rs  normalize.rs
tests/: common.rs  edge_cases.rs  integration.rs  localization.rs  rust.rs  windows.rs
