[package]
name = "normpath"
version = "0.3.2"
authors = ["dylni"]
edition = "2021"
rust-version = "1.57.0"
exclude = [".*", "/rustfmt.toml", "/tests"]
description = """
More reliable path manipulation
"""
repository = "https://github.com/dylni/normpath"
readme = "README.md"
keywords = ["absolute", "canonicalize", "path", "normalize", "windows"]
categories = ["command-line-interface", "filesystem", "os"]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "normpath_docs_rs"]
rustdoc-args = ["--cfg", "normpath_docs_rs"]

[dependencies]
print_bytes = { version = "0.6", optional = true }
serde = { version = "1.0", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi"] }

[dev-dependencies]
bincode = "1.3"
tempfile = "3.1"

[target.'cfg(not(windows))'.dev-dependencies]
libc = "0.2"

[features]
localization = ["winapi/shellapi"]
