[package]
name = "normpath"
version = "1.1.0"
authors = ["dylni"]
edition = "2021"
rust-version = "1.57.0"
description = """
More reliable path manipulation
"""
readme = "README.md"
repository = "https://github.com/dylni/normpath"
license = "MIT OR Apache-2.0"
keywords = ["absolute", "canonicalize", "path", "normalize", "windows"]
categories = ["command-line-interface", "filesystem", "os"]
exclude = [".*", "tests.rs", "/rustfmt.toml", "/src/bin", "/tests"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "normpath_docs_rs"]
rustdoc-args = ["--cfg", "normpath_docs_rs"]

[dependencies]
print_bytes = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true }
uniquote = { version = "3.2", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
bincode = "1.3"
tempfile = "3.2"

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.48", features = ["Win32_Foundation"] }

[target.'cfg(not(windows))'.dev-dependencies]
libc = "0.2"

[features]
localization = ["windows-sys/Win32_UI_Shell", "windows-sys/Win32_UI_WindowsAndMessaging"]
